--- a/1149_RGB거리.md
+++ b/1149_RGB거리.md
@@ -16,7 +16,8 @@ RGB거리에는 집이 N개 있다. 거리는 선분으로 나타낼 수 있고,
 ## 출력
 첫째 줄에 모든 집을 칠하는 비용의 최솟값을 출력한다.
 
----
+&nbsp;
+&nbsp;
 
 ## 해설
 Dynamic Programming을 활용하는 문제이다. 각 집들에 대하여 현재 집을 빨강, 파랑, 초록을 칠했을 경우의 1번 집부터 현재 집까지의 최소값을 저장하는 DP 배열을 만든다. dp[i][0] = min(dp[i-1][1], dp[i-1][2])로 구할 수 있다는 걸 생각하면 되는 dp문제이다. 
@@ -67,7 +68,3 @@ int main() {
 	return 0;
 }
 ```
-
-## 분류
-
-다이나믹 프로그래밍
