--- a/1149_RGB거리.md
+++ b/1149_RGB거리.md
@@ -9,14 +9,14 @@ RGB거리에는 집이 N개 있다. 거리는 선분으로 나타낼 수 있고,
 + N번 집의 색은 N-1번 집의 색과 같지 않아야 한다.
 + i(2 ≤ i ≤ N-1)번 집의 색은 i-1번, i+1번 집의 색과 같지 않아야 한다.
 
-## 입력
+### 입력
+	첫째 줄에 집의 수 N(2 ≤ N ≤ 1,000)이 주어진다.
+	둘째 줄부터 N개의 줄에는 각 집을 빨강, 초록, 파랑으로 칠하는 비용이 1번 집부터 한 줄에 하나씩 주어진다.
+	집을 칠하는 비용은 1,000보다 작거나 같은 자연수이다.
 
-첫째 줄에 집의 수 N(2 ≤ N ≤ 1,000)이 주어진다. 둘째 줄부터 N개의 줄에는 각 집을 빨강, 초록, 파랑으로 칠하는 비용이 1번 집부터 한 줄에 하나씩 주어진다. 집을 칠하는 비용은 1,000보다 작거나 같은 자연수이다.
+### 출력
+	첫째 줄에 모든 집을 칠하는 비용의 최솟값을 출력한다.
 
-## 출력
-첫째 줄에 모든 집을 칠하는 비용의 최솟값을 출력한다.
-
-&nbsp;  
 &nbsp;
 
 ## 해설
